# FuzzFramework

./: .gitignore  LICENSE  README.md  fuzz.py  main.py  pyproject.toml
.github/workflows/: main.yml
api_interface/: request_engine.py
api_interface/api_configuration/: __init__.py  api_configuration.py  configuration-template.yaml  sample-api-config-prod.yaml  sample-api-config.yaml  testing-api-config.yaml
api_interface/constants/: __init__.py  data_type.py  http_method.py
core/: __init__.py  base.py
core/grammar_fuzzer/: __init__.py
core/grammar_fuzzer/constants/: regex.py
core/grammar_fuzzer/data_generators/: __init__.py  base.py  list.py
core/grammar_mutation_fuzzer/: __init__.py
core/grammar_mutation_fuzzer/data_generators/: __init__.py  base.py
core/mutation_fuzzer/: __init__.py
core/mutation_fuzzer/data_generators/: __init__.py  base.py  bool_generator.py  int_generator.py  list_generator.py  str_generator.py
core/pentest_fuzzer/: __init__.py
core/pentest_fuzzer/constants/: sql_injection.txt
core/pentest_fuzzer/routines/: __init__.py  csrf.py  rate_limit_check.py  sqli.py
core/sample_fuzzer/: __init__.py
core/sample_fuzzer/data_generators/: __init__.py  base.py  bool.py  bool_generator.py  dict.py  int.py  int_generator.py  list.py  str.py  str_generator.py
core/simple_fuzzer/: __init__.py
