[tool.poetry]
name = "super-duper-fuzzer"
version = "0.1.0"
description = "A fuzzing tool for testing cloud services through their REST APIs"
authors = ["Keerthana Nuti <keerthana.nuti11@gmail.com>, Shashank Aital <aitalshashank2@gmail.com>, Shreyas Dodamani <shreyurd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
